test/bad/13-01-statyczne-typowanie-zmiennych.gg
val x: Int = True;

0